fixed spacing in forslag title, fixed problem with range tags, cypress testing range tags (#1277)

--- a/src/client/components/filter/FilterPage/FilterPage.css
+++ b/src/client/components/filter/FilterPage/FilterPage.css
@@ -17,13 +17,15 @@ work-card.filter-page-title {
 
 .filter-page-results .must-include{
   text-decoration: underline;
+
 }
 .filter-page-results .must-not-include{
   text-decoration: line-through;
-}
 
-.filter-page-results .recommended-words{
-  display:inline-flex;
+}
+.tag-title{
+  white-space: nowrap;
+  display:inline-block;
 }
 
 /* Kiosk-mode enabled */
